tests/baselines/reference/parserEqualsGreaterThanAfterFunction2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction2.ts (5 errors) ====
    function (a => b;
             ~
!!! error TS1003: Identifier expected.
                ~~
!!! error TS1005: ',' expected.
                    ~
!!! error TS1005: ',' expected.
                     
!!! error TS1005: ')' expected.
            
!!! error TS2391: Function implementation is missing or not immediately following the declaration.